# EvilCrowRF-V2

./: .gitignore  AGENTS.md  release_builder.py
.zed/: settings.json
docs/: hass-integration.md  tcp_transport.md  web_app_design.md
firmware/: .clangd  .gitignore  Makefile  filter_https_ota.py  partitions.csv  platformio.ini  pyproject.toml
firmware/docs/: TODO.md  architecture.md  flipper_protocol_aware_port_plan.md  lazy-module-loading-plan.md  orphaned_code.md
firmware/include/: BinaryMessages.h  BruterCommands.h  BruterState.h  ButtonCommands.h  ConfigManager.h  DeviceTasks.h  FileCommands.h  NrfCommands.h  OtaCommands.h  ProtoPirateCommands.h  RecorderCommands.h  SafeBuffer.h  SdrCommands.h  StateCommands.h  StringBuffer.h  SubFileParser.h  SubGhzConfigCommands.h  TransmitterCommands.h  config.h
firmware/lib/CC1101_RadioLib/: CC1101_Radio.h
firmware/lib/generators/: FlipperSubFile.cpp  FlipperSubFile.h
firmware/lib/helpers/: StringHelpers.cpp
firmware/src/: main.cpp
firmware/tests/: capture.sub
firmware/tools/: build_firmware.bat  clangd-compile-commands.py  esptool-package.json  flash_firmware.bat
hass/: .gitignore  Makefile  pyproject.toml  pyrightconfig.json
hass/custom_components/evilcrow_rf/: __init__.py  binary_protocol.py  button.py  config_flow.py  const.py  coordinator.py  device.py  fcc_lookup.py  flipper_sub.py  manifest.json  models.py  notification_manager.py  select.py  sensor.py  services.py  services.yaml  signal_monitor.py  smartconfig.py  strings.json  subghz.py  target_device_store.py  text.py  timeout_tracker.py  wifi_transport.py  yaml_config.py
hass/custom_components/evilcrow_rf/translations/: en.json
hass/docs/: README.md  plan.md  prompts.md
hass/tests/: conftest.py  test_binary_protocol.py  test_flipper_sub.py  test_timeout_tracker.py
mobile_app/: .gitignore  AGENTS.md  Makefile  pubspec.yaml
mobile_app/android/: gradle.properties
mobile_app/docs/: TODO.md  architecture.md  ble_optimizations.md  ios_build_guide_en.md  refactor.md
mobile_app/lib/: main.dart
mobile_app/linux/: .clangd  CMakeLists.txt  README.md  io.evilcrow.evilcrowrf.metainfo.xml
mobile_app/test/: widget_test.dart
(+227 files in other folders)
